--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "grunt-contrib-uglify": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-csso": "^0.6.3",
-    "grunt-sass": "^0.18.1",
+    "gulp-sass": "^2.0.0",
     "grunt-html-build": "^0.3.2",
     "grunt-modernizr": "^0.6.0",
     "grunt-postcss": "^0.1.0",
